2.0-ngld/build/torturethread.test.log
[1mtorturethread.c:58:64: [0m[0;1;31merror: [0m[1mtoo many arguments to function call, expected 2, have 3[0m
        sub_threads[i] = SDL_CreateThread(SubThreadFunc, name, &flags[i]);
[0;1;32m                         ~~~~~~~~~~~~~~~~                      ^~~~~~~~~
[0m[1m/home/ngld/dev/em-dev/emscripten/system/include/SDL/SDL_thread.h:141:1: [0m[0;1;30mnote: [0m'SDL_CreateThread' declared here[0m
extern DECLSPEC SDL_Thread *SDLCALL
[0;1;32m^
[0m[1mtorturethread.c:94:57: [0m[0;1;31merror: [0m[1mtoo many arguments to function call, expected 2, have 3[0m
        threads[i] = SDL_CreateThread(ThreadFunc, name, (void*) (uintptr_t) i);
[0;1;32m                     ~~~~~~~~~~~~~~~~                   ^~~~~~~~~~~~~~~~~~~~~
[0m[1m/home/ngld/dev/em-dev/emscripten/system/include/SDL/SDL_thread.h:141:1: [0m[0;1;30mnote: [0m'SDL_CreateThread' declared here[0m
extern DECLSPEC SDL_Thread *SDLCALL
[0;1;32m^
[0m2 errors generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
